<resources>
    <string name="app_name">Sistema de Pedidos</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Nome">Nome</string>
    <string name="Sobrenome">Sobrenome</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Cadastrar_Cliente">Cadastrar Cliente</string>
    <string name="CPF">CPF</string>
    <string name="Clientes">Clientes</string>
    <string name="Produtos">Produtos</string>
    <string name="Cadastrar_Produto">Cadastrar Produto</string>
    <string name="Descrição">Descrição</string>
    <string name="atualizar">Atualizar</string>
    <string name="alterar">Alterar</string>
    <string name="id">ID</string>
    <string name="Salvar">Salvar</string>
    <string name="Editar_Produto">Editar Produto</string>
</resources>
